--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             max-width: 800px;
             margin: 0 auto;
             text-align: left;
-            overflow-y: auto; /* Tambahkan overflow untuk memungkinkan scroll */
-            height: calc(100% - 40px); /* Tinggi konten adalah 100% tinggi layar dikurangi padding atas dan bawah */
+            overflow-y: auto;
+            height: calc(100% - 40px);
         }
 
         h1, h2, footer {
