--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             text-align: left;
             overflow-y: auto;
             height: calc(100% - 40px);
+            background-color: rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
         }
 
         h1 {
@@ -44,6 +46,12 @@
             text-align: center;
             margin-top: 40px;
             animation: fadeIn 3s ease-in-out;
+        }
+
+        h3 {
+            margin-top: 30px;
+            color: #ff6347;
+            animation: fadeIn 2.5s ease-in-out;
         }
 
         ul {
@@ -60,6 +68,7 @@
         ul li strong {
             display: block;
             margin-bottom: 5px;
+            color: #ff6347;
         }
 
         footer {
