--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             height: calc(100% - 40px);
             background-color: rgba(0, 0, 0, 0.7);
             border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
         h1 {
@@ -103,6 +104,25 @@
             from { transform: translateY(20px); opacity: 0; }
             to { transform: translateY(0); opacity: 1; }
         }
+
+        @media (max-width: 600px) {
+            .content {
+                padding: 10px;
+                height: calc(100% - 20px);
+            }
+
+            h1 {
+                font-size: 2em;
+            }
+
+            h2 {
+                font-size: 1.5em;
+            }
+
+            h3 {
+                font-size: 1.2em;
+            }
+        }
     </style>
 </head>
 <body>
@@ -133,6 +153,12 @@
             <li><strong>Dokumentasi:</strong> Menyimpan dokumentasi semua konten yang dipublikasikan, termasuk artikel, foto, dan desain. Melaporkan kegiatan dan hasil kerja secara rutin kepada pembina OSIS dan pengurus inti.</li>
             <li><strong>Evaluasi:</strong> Melakukan evaluasi rutin terhadap kinerja tim dan hasil publikasi untuk peningkatan kualitas. Menyusun laporan evaluasi sebagai bahan pertimbangan untuk kegiatan berikutnya.</li>
         </ul>
+      <h3>Social Media:</h3>
+      <ul>
+        <li><strong><a href="instagram.com/osis.smkfatahillah">OSIS</a></strong></li>
+          <li><strong><a href="instagram.com/fatahillah.tv">SMKFC</a></strong></li>
+      </ul>
+      <h3>MANTAPPP</h3>
 
         <div class="team">
             <h2>Anggota Seksi Dokumentasi-Editor</h2>
