--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
                 font-size: 1.2em;
             }
         }
+
+        a {
+            color: #ff6347;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
@@ -153,12 +163,12 @@
             <li><strong>Dokumentasi:</strong> Menyimpan dokumentasi semua konten yang dipublikasikan, termasuk artikel, foto, dan desain. Melaporkan kegiatan dan hasil kerja secara rutin kepada pembina OSIS dan pengurus inti.</li>
             <li><strong>Evaluasi:</strong> Melakukan evaluasi rutin terhadap kinerja tim dan hasil publikasi untuk peningkatan kualitas. Menyusun laporan evaluasi sebagai bahan pertimbangan untuk kegiatan berikutnya.</li>
         </ul>
-      <h3>Social Media:</h3>
-      <ul>
-        <li><strong><a href="instagram.com/osis.smkfatahillah">OSIS</a></strong></li>
-          <li><strong><a href="instagram.com/fatahillah.tv">SMKFC</a></strong></li>
-      </ul>
-      <h3>MANTAPPP</h3>
+
+        <h3>Social Media:</h3>
+        <ul>
+            <li><strong>klik <a href="https://instagram.com/osis.smkfatahillah" target="_blank">OSIS</a></strong></li>
+            <li><strong>klik <a href="https://instagram.com/fatahillah.tv" target="_blank">SMKFC</a></strong></li>
+        </ul>
 
         <div class="team">
             <h2>Anggota Seksi Dokumentasi-Editor</h2>
@@ -280,4 +290,5 @@
         });
     </script>
 </body>
-</html>
+                                 </html>
+    
